--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -34,3 +34,11 @@
     border-radius: 6px;
     text-transform: capitalize;
 }
+.productName {
+    white-space: no-wrap !important;
+    font-size: 14px !important;
+    font-family: "Manrope", sans-serif !important;
+    color: #1b2d4f;
+    font-weight: 700 !important;
+    line-height: unset !important;
+}
