--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -59,10 +59,21 @@
 
 .listItem {
     font-family: "Manrope", sans-serif !important;
-    font-size: 14px;
-    color: #1b2d4f;
+    font-size: 14px !important;
+    color: #1b2d4f !important;
     font-weight: 500;
-    padding: 0px 12px !important;
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+    padding: 4px 12px;
+    align-items: center;
+    width: 140px;
+    height: 32px;
+    border-radius: 6px;
+
+    margin: 8px 8px 8px 16px;
+    gap: 8px;
+    /* background-color: #d6e7ff; */
 }
 
 .customButton {
@@ -79,4 +90,24 @@
     border-radius: 6px !important;
     padding: 0 !important;
     letter-spacing: 0 !important;
+}
+.sidebarContainer .listItem.active {
+    /* background-color: #d6e7ff;
+    width: 180px !important;
+    height: 40px !important;
+    border-radius: 6px;
+    color: #1276ff; */
+    /* padding: 4px 12px !important; */
+    background-color: #d6e7ff;
+    color: #1276ff !important;
+}
+.listItem .listItemText {
+    font-family: "Manrope", sans-serif !important;
+    font-size: 14px !important;
+    color: #1b2d4f !important;
+    font-weight: 500 !important;
+}
+
+.listItem .listItemText.active {
+    color: #1276ff !important;
 }
