--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,6 +32,7 @@
     box-shadow: none !important;
     border: 0.5px solid #e9eaed !important;
     display: flex;
+    position: sticky !important;
 }
 .tool-bar {
     height: 50px !important;
@@ -40,4 +41,20 @@
 .box-wrap {
     display: flex !important;
     align-items: center !important;
+}
+@media (max-width: 600px) {
+    .hidden-xs {
+        display: none !important;
+    }
+    .main-content {
+        flex-direction: column !important;
+        align-items: flex-start !important;
+        margin: 10px 0 5px 0 !important;
+    }
+    .main-content .main-items {
+        gap: 8px !important;
+    }
+    .main-items .main-edit {
+        padding: 0 !important;
+    }
 }
